fixed the floating 'no' radio button in faculty bios

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -177,27 +177,20 @@ to be in it's own card div, something to think about in the future -->
                         $("<select>").attr('id', 'seminary' + id).attr('name', 'seminary' + id))
                 );
 
-
                 inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'dept-chair-div' + id)
-                        .append('Are you the Department Chair?')
-                        .append($('<label>').addClass('radio')
-                                .append($('<span>').addClass('icons')
-                                        .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
-                                        .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base'))
-                                )
-                                .append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'Yes'))
-                                .append('Yes')
+                        .append($('<label>').html('Are you the Department Chair?')
+                                .append($('<div>').addClass('radio')
+                                        .append($('<span>').addClass('icons')
+                                                .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
+                                                .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base')))
+                                        .append($('<label>').html('Yes').append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'Yes'))))
+                                .append($('<div>').addClass('radio')
+                                        .append($('<span>').addClass('icons')
+                                                .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
+                                                .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base')))
+                                        .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'No'))))
                         )
-                )
-                .append($('<label>').addClass('radio')
-                        .append($('<span>').addClass('icons')
-                                .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
-                                .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base'))
-                        )
-                        .append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'No'))
-                        .append($('<label>').html('No'))
                 );
-
                 inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'program-director-div' + id)
                         .append($('<label>').html('Are you the Program Director?')
                                 .append($('<div>').addClass('radio')
