--- a/tinker/faculty_bio/templates/faculty-bio-home.html
+++ b/tinker/faculty_bio/templates/faculty-bio-home.html
@@ -25,6 +25,14 @@
             {% endif %}
             <br/>
             {% if bio.path != '' %}<small><a href={{ bio.path }}>{{ bio.path }}</a></small>{% endif %}
+          <br/>
+            <span id="activate-text-{{ bio.id }}">
+                {% if bio.deactivated == 'Yes' %}
+                    Deactivated
+                {% else %}
+                    Activated
+                {% endif %}
+            </span>
           </p>
         </div>
         <div class="large-7 columns small-3">
@@ -142,7 +150,8 @@
 
     $(".activate-press").click(function(){
         var current_element = $(this);
-        var inputs = {"id": current_element.data('faculty-bio-id'), "activate": current_element.attr('data-method')};
+        var id = current_element.data('faculty-bio-id');
+        var inputs = {"id": id, "activate": current_element.attr('data-method')};
         var url = '/faculty-bio/activate';
 
         // temporarily create a placeholder.
@@ -154,13 +163,15 @@
             data: JSON.stringify(inputs),
             contentType: 'application/json;charset=UTF-8',
             success: function(result) {
-                  if( current_element.attr('data-method') == 'activate') {
-                      current_element.attr('data-method', 'deactivate');
-                      current_element.html('Deactivate');
-                  } else {
-                      current_element.attr('data-method', 'activate');
-                      current_element.html('Activate');
-                  }
+                current_element.html('Success');
+
+                if( current_element.attr('data-method') == 'activate') {
+                    $('#activate-text-' + id).text('Activated');
+                } else {
+                    $('#activate-text-' + id).text('Deactivated');
+                }
+                current_element.attr('style', 'background-color:gray;');
+                current_element.prop('onclick',null).off('click');
             }
         });
     });
