--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -650,35 +650,35 @@ to be in it's own card div, something to think about in the future -->
                 </div>
 
                 <div id="dept-chair-div1" class="hide-when-school-changes1">
-                    Are you the Department Chair?
-                    <label class="radio">
-                        <input type="radio" name="dept-chair1" value="Yes">Yes
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="dept-chair1" value="No">No
-                    </label>
+                    <label>Are you the Department Chair?</label>
+                    <div class="radio">
+                        <input type="radio" name="dept-chair1" value="Yes"><label>Yes</label>
+                    </div>
+                    <div class="radio">
+                        <input type="radio" name="dept-chair1" value="No"><label>No</label>
+                    </div>
                 </div>
                 <div id="program-director-div1" class="hide-when-school-changes1">
-                    Are you the Program Director?
-                    <label class="radio">
-                        <input type="radio" name="program-director1" value="Yes">Yes
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="program-director1" value="No">No
-                    </label>
+                    <label>Are you the Program Director?</label>
+                    <div class="radio">
+                        <input type="radio" name="program-director1" value="Yes"><label>Yes</label>
+                    </div>
+                    <div class="radio">
+                        <input type="radio" name="program-director1" value="No"><label>No</label>
+                    </div>
                 </div>
                 <div id="lead-faculty-div1" class="hide-when-school-changes1">
-                    For this program, I am the...
-                    <label class="radio">
-                        <input type="radio" name="lead-faculty1" value="Lead Faculty">Lead Faculty
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="lead-faculty1" value="Program Director">Program
-                            Director
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="lead-faculty1" value="Other">Other
-                    </label>
+                    <label>For this program, I am the...</label>
+                    <div class="radio">
+                        <input type="radio" name="lead-faculty1" value="Lead Faculty"><label>Lead Faculty</label>
+                    </div>
+                    <div class="radio">
+                        <input type="radio" name="lead-faculty1" value="Program Director">
+                        <label>Program Director</label>
+                    </div>
+                    <div class="radio">
+                        <input type="radio" name="lead-faculty1" value="Other"><label>Other</label>
+                    </div>
                 </div>
 
                 <div id="new-job-title-div1" class="hide-when-school-changes1"><label>
