--- a/tinker/faculty_bios/templates/faculty-bio-home.html
+++ b/tinker/faculty_bios/templates/faculty-bio-home.html
@@ -53,7 +53,7 @@
                 {% else %}
                     <li>
                         <a id="{{ bio.id }}" data-method='deactivate' data-faculty-bio-id="{{ bio.id }}"
-                           class="small btn btn-primary btn-alert activate-press">Deactivate
+                           class="small btn btn-primary btn-alert activate-press deactivate">Deactivate
                         </a>
                     </li>
                 {% endif %}
