multiple image id's error

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -81,7 +81,7 @@ to be in it's own card div, something to think about in the future -->
 
                             {% elif field.name == "image" %}
                                 {# The image_url field is hidden. So get the image from this. #}
-                                <p id="image">Is your image a perfect square? Don't forget to crop it at <a
+                                <p id="image-div">Is your image a perfect square? Don't forget to crop it at <a
                                         href="http://www.croppola.com">croppola.com</a>. Thanks!</p>
                                 {{ form['image'] }}
                                 {{ form['image_url'] }}
