Allow for submission of faculty bio images

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -25,7 +25,7 @@ to be in it's own card div, something to think about in the future -->
                 <h3 class="subtitle">Edit Your Bio</h3>
                 <hr/>
 
-                <form id="facultybioform" action="{{ url_for('faculty_bios.FacultyBiosView:submit') }}" method="post">
+                <form id="facultybioform" action="{{ url_for('faculty_bios.FacultyBiosView:submit') }}" method="post" enctype="multipart/form-data">
                     <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
                     <input type="hidden" name="faculty_bio_id" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
 
