Fixed validation errors on Faculty Bios form

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -94,7 +94,7 @@ to be in it's own card div, something to think about in the future -->
                                         $("#display_image").show();
                                     }
 
-                                    if ("False" == "{{ edit_image}}") {
+                                    if ("False" == "{{ edit_image }}") {
                                         $("#image").hide();
                                     }
 
@@ -692,7 +692,5 @@ to be in it's own card div, something to think about in the future -->
     </fieldset>
     <a href="javascript:void(0);" id="add_new_job_button" class="btn btn-primary">Add Another Job Title</a>
     <a href="javascript:void(0);" id="remove_new_job_button" style="display:none"
-       class="btn btn-primary btn-alert">Remove
-        Job
-        Title</a>
+       class="btn btn-primary btn-alert">Remove Job Title</a>
 {%- endmacro %}
