Changed the logic of how the image editor gets added in fac bios' form

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -94,7 +94,7 @@ to be in it's own card div, something to think about in the future -->
                                         $("#display_image").show();
                                     }
 
-                                    if ("False" == "{{ edit_image }}") {
+                                    if ("{{ edit_image }}" == "False") {
                                         $("#image").hide();
                                     }
 
